--- a/static/style.css
+++ b/static/style.css
@@ -2,40 +2,56 @@ h1 {
 color:red;
 }
 
-.dropdown-box{
-        width: 500px;
-        height: 315px;
-        margin: 20px;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        }
+.phonon-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.band-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.planar-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.back-button{
+    font-size: 24px;
+}
+
+.search{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
 
         .dropdown-list{
-        display: flex;
-        align-items: center;
-        margin-left: 14px;
-
         }
 
         .dropdown {
-            width: 40px;
-            height: 40px;
-            position: relative;
-            display: flex;
-            align-items: center;
-            border-radius: 50%;
-            background-color: red;
+    border-radius: 0%;
+    background-color: grey;
+
+    margin-left: 10px;
+    padding:3px;
+
         }
 
         .dropdown-content {
             display: none;
-<!--            position: absolute;-->
             background-color: #f9f9f9;
             min-width: 160px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-<!--            z-index: 1;-->
-<!--            right: 0;-->
         }
 
         .dropdown-list:hover{
@@ -45,10 +61,6 @@ color:red;
          .dropdown-content {
             display: flex;
             position: absolute;
-<!--            background-color: #f9f9f9;-->
-<!--            border: 1px solid black;-->
-<!--            min-width: 160px;-->
-<!--            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);-->
             z-index: 1;
             right: 0;
             }
